pamc/src/tests/sample_code/should_fail/type_check/type_mismatch/misordered_fun_params.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let foo = fun _(~x: Nat, ~y: Nat): Nat { x };

type Unit { .C: Unit }

let wrong = fun _(_: Unit):
    forall(~y: Nat, ~x: Nat) { Nat }
{
    foo
};
